<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        tools:context=".Form">

    <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_happy_birthday"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_Recipient"
        />

    <TextView
            android:id="@+id/tv_Recipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_recipient"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_Recipient"
            />

    <EditText
            android:id="@+id/et_Recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:labelFor="@id/tv_Recipient"
            android:hint="@string/recipient"
            android:autofillHints="Recipient"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:fontFamily="casual"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_Recipient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSender"
            />

    <TextView
            android:id="@+id/tvSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_sender"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/et_Recipient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_Sender"
            />

    <EditText
            android:id="@+id/et_Sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:labelFor="@id/tvSender"
            android:hint="@string/sender"
            android:autofillHints="Sender"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:fontFamily="casual"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvSender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/background_picker"
        />

    <TextView
            android:id="@+id/background_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_birthday_s_card_background"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:layout_marginVertical="4dp"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            app:layout_constraintTop_toBottomOf="@+id/et_Sender"
            app:layout_constraintBottom_toTopOf="@+id/background_carrousel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

        />

    <include android:id="@+id/background_carrousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/rv_background_picker"
            app:layout_constraintTop_toBottomOf="@id/background_picker"
            app:layout_constraintBottom_toTopOf="@id/btn_generate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:elevation="3dp"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_generate"
            android:text="@string/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Button.PrimaryVariant"
            android:layout_margin="8dp"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            app:backgroundTint="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/background_carrousel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
</androidx.constraintlayout.widget.ConstraintLayout>